finally done, react better im ngl

--- a/short-answers/q2.md
+++ b/short-answers/q2.md
@@ -3,6 +3,11 @@
 What is the "Request/Response Cycle?"
 
 # Answer
+The ***HTTP Request/Response cycle*** is the pattern of communication used by two computers communicating using the HTTP protocol. It works like this:
 
+The program/computer making the request is the client
+The client must initiate a request. A server can’t reach out and send Responses to clients on its own. It just waits for incoming requests.
+That program/computer responding to the request is called the server
+The server must already be up and running and ready to accept incoming requests.
 
 # Teacher Feedback
