--- a/short-answers/q3.md
+++ b/short-answers/q3.md
@@ -19,5 +19,16 @@ Make sure to keep all variable and function names the same. The function must be
 
 # Answer
 
+```js
+const getAllUsers = async () => {
+  try {
+  const resp = await fetch('https://example.com/users')
+  const users = await resp.json()
+  return users
+  } catch (error) {
+    console.log(error)
+  }
+}
+```
 
 # Teacher Feedback
