--- a/short-answers/q7.md
+++ b/short-answers/q7.md
@@ -13,9 +13,9 @@ Instead of:
 ```
 
 # Answer
-1.
+1. cleaner code, over all better usage
 
-2.
+2. import css and html files in js
 
 
 # Teacher Feedback
