--- a/short-answers/q1.md
+++ b/short-answers/q1.md
@@ -3,5 +3,6 @@
 What is the primary difference between an HTTP GET request and an HTTP Post request?
 
 # Answer
-
+Get - read
+post - create
 # Teacher Feedback
