--- a/short-answers/q4.md
+++ b/short-answers/q4.md
@@ -3,10 +3,10 @@ Explain what the following status codes mean. Don't just copy and paste the defa
 
 # Answer
 
-1. 200 -
+1. 200 - OK : Request granted/success
 
-2. 404 -
+2. 404 - NOT FOUND : Can not be found; no redirection
 
-3. 500 -
+3. 500 - INTERNAL SERVER ERROR : Request denied, can not find issue
 
 # Teacher Feedback
