--- a/short-answers/q5.md
+++ b/short-answers/q5.md
@@ -3,6 +3,6 @@
 What is the danger behind inserting user entered information *directly* into the DOM unescaped?
 
 # Answer
-
+Cross site scripting (XSS), essentially it exposes user data
 
 # Teacher Feedback
