--- a/short-answers/q6.md
+++ b/short-answers/q6.md
@@ -3,6 +3,6 @@
 What does `element.append()` do? What is an advantage it has over `element.appendChild()`?
 
 # Answer
-
+The advantage that `.append` has over `.appendChild` is that **appendChild** only allows youn to add one element at a time. **append** lets you add several at once. I just use append
 
 # Teacher Feedback
