--- a/short-answers/q8.md
+++ b/short-answers/q8.md
@@ -5,6 +5,8 @@ When we say "use semantic elements," what does that mean?
 Please be sure to give an example of a semantic and non-semantic element in your explanation.
 
 # Answer
+Semantic elements describe their meainng in a web page. 
 
-
+Semantic : `, <header> <main>`
+non-Semantic : ``
 # Teacher Feedback
